// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component::AggregationBranch snapshots renders with all checked 1`] = `
<div
  className="aggregation-branch"
>
  <li
    className="parent m-form-field m-form-field__checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={true}
      className="flex-fixed a-checkbox"
      id="issuefoo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label"
      htmlFor="issuefoo"
    />
    <button
      className="flex-all a-btn a-btn__link"
      onClick={[Function]}
      title="foo"
    >
      <span>
        foo
      </span>
      <span
        className="cf-icon cf-icon-up"
      />
    </button>
    <span
      className="flex-fixed parent-count"
    >
      <span>
        99
      </span>
    </span>
  </li>
  <ul
    className="children"
  >
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•bar"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•bar"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issuefoo•bar"
      >
        bar
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          90
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•baz"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•baz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issuefoo•baz"
      >
        baz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          5
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•qaz"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•qaz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issuefoo•qaz"
      >
        qaz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          4
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`component::AggregationBranch snapshots renders with indeterminate 1`] = `
<div
  className="aggregation-branch"
>
  <li
    className="parent m-form-field m-form-field__checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={false}
      className="flex-fixed a-checkbox"
      id="issuefoo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label indeterminate"
      htmlFor="issuefoo"
    />
    <button
      className="flex-all a-btn a-btn__link"
      onClick={[Function]}
      title="foo"
    >
      <span>
        foo
      </span>
      <span
        className="cf-icon cf-icon-up"
      />
    </button>
    <span
      className="flex-fixed parent-count"
    >
      <span>
        99
      </span>
    </span>
  </li>
  <ul
    className="children"
  >
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•bar"
        checked={true}
        className="flex-fixed a-checkbox"
        id="issuefoo•bar"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issuefoo•bar"
      >
        bar
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          90
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•baz"
        checked={false}
        className="flex-fixed a-checkbox"
        id="issuefoo•baz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issuefoo•baz"
      >
        baz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          5
        </span>
      </span>
    </li>
    <li
      className="layout-row m-form-field m-form-field__checkbox"
    >
      <input
        aria-label="foo•qaz"
        checked={false}
        className="flex-fixed a-checkbox"
        id="issuefoo•qaz"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="a-label flex-all bucket-key body-copy"
        htmlFor="issuefoo•qaz"
      >
        qaz
      </label>
      <span
        className="flex-fixed bucket-count"
      >
        <span>
          4
        </span>
      </span>
    </li>
  </ul>
</div>
`;

exports[`component::AggregationBranch snapshots renders with none checked 1`] = `
<div
  className="aggregation-branch"
>
  <li
    className="parent m-form-field m-form-field__checkbox body-copy"
  >
    <input
      aria-label="foo"
      checked={false}
      className="flex-fixed a-checkbox"
      id="issuefoo"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="toggle a-label"
      htmlFor="issuefoo"
    />
    <button
      className="flex-all a-btn a-btn__link"
      onClick={[Function]}
      title="foo"
    >
      <span>
        foo
      </span>
      <span
        className="cf-icon cf-icon-down"
      />
    </button>
    <span
      className="flex-fixed parent-count"
    >
      <span>
        99
      </span>
    </span>
  </li>
</div>
`;
